test/functions/shadowing/type-method-type-field.good
type-method-type-field.chpl:7: error: parenless proc redeclares the field 'x'
